--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,7 +1,7 @@
 <header id="main-header">
     <div id="logo" style="display: flex; align-items: center;">
         <a href="/" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
-            <img src="/images/Designer.png" alt="Armani Logo"
+            <img src="/images/Designer.png" alt="Jovanni Logo"
                 style="max-width: 80px; height: auto; margin-right: 10px;" />
             <span style="font-size: 24px; font-weight: bold;">Jovanni</span>
         </a>
