--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,5 @@
+/* base.css */
+
 * {
     box-sizing: border-box;
 }
@@ -89,7 +91,7 @@ a {
 .alert {
     border-radius: var(--border-radius-small);
     background-color: var(--color-error-100);
-    color: var (--color-error-500);
+    color: var(--color-error-500);
     padding: var(--space-4);
 }
 
