--- a/views/shared/includes/footer.ejs
+++ b/views/shared/includes/footer.ejs
@@ -35,7 +35,7 @@
 
         .footer-section.about p {
             line-height: 1.6;
-            color: #bdc3c7;
+            color: #000000;
             margin-bottom: 20px;
         }
 
